--- a/webpack/src/styles/index.scss
+++ b/webpack/src/styles/index.scss
@@ -17,7 +17,7 @@ $navHeight: 2.1875em;
 body {
 	// font-size: 14px;
 	// font-size: 72px;
-	font-size: 2.22vh;
+	font-size: 2vh;
 }
 
 
@@ -25,7 +25,7 @@ body {
 @import 'layout';
 @import 'typography';
 @import 'components';
-
+// @import 'debug';
 
 
 
